--- a/index.html
+++ b/index.html
@@ -67,6 +67,40 @@
   </div>
 
   <div class="card">
+    <h2>Display & Notation</h2>
+    <ul>
+      <li>Split screen</li>
+      <li>Play button</li>
+      <li>Record & upload audio</li>
+      <li>Listen uploaded music</li>
+      <li>Metronome + Tempo adjust</li>
+      <li>Room meeting + Whiteboard</li>
+      <li>Dynamic 5-Line Drum Notation Display
+        <br><small>(Kick, Snare, Hi-Hat notes appear as you program beats)</small>
+      </li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h2>Drum Machine</h2>
+    <ul>
+      <li>Beat adjustments show notes in box</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h2>Database</h2>
+    <ul>
+      <li>Student List</li>
+      <li>Track their progress</li>
+    </ul>
+  </div>
+</section>
+<footer>Designed for Music Learning 🎧🥁</footer>
+</body>
+</html>
+
+  <div class="card">
     <h2>Display Features</h2>
     <ul>
       <li>Split screen</li>
