--- a/index.html
+++ b/index.html
@@ -1,70 +1,379 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Drums Class App</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Drums Class — Live Studio</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #0d0d0d;
-    color: white;
-  }
-  header {
-    background: #111;
-    padding: 20px;
-    text-align: center;
-    font-size: 28px;
-    font-weight: bold;
-    color: #ff5252;
-    letter-spacing: 2px;
-  }
-  section {
-    padding: 40px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 20px;
-  }
-  .card {
-    background: #1a1a1a;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-    transition: transform 0.3s;
-  }
-  .card:hover {
-    transform: translateY(-10px);
-  }
-  h2 {
-    color: #ffa31a;
-  }
-  ul {
-    list-style: none;
-    padding: 0;
-    line-height: 1.6;
-  }
-  footer {
-    text-align: center;
-    padding: 10px;
-    background: #111;
-    color: #aaa;
-  }
+  :root{--bg:#0b0b0b;--card:#101214;--accent:#ff5252;--muted:#9aa0a6}
+  *{box-sizing:border-box}
+  body{margin:0;font-family:Inter, system-ui, -apple-system, Arial, sans-serif;background:linear-gradient(180deg,#050505, #0d0d0d);color:#fff}
+  header{display:flex;align-items:center;gap:16px;padding:14px 20px;background:rgba(255,255,255,0.02);border-bottom:1px solid rgba(255,255,255,0.03)}
+  header img{height:44px;width:44px;border-radius:8px;object-fit:cover}
+  header h1{font-size:18px;margin:0;color:var(--accent)}
+  .container{display:grid;grid-template-columns:1fr 360px;gap:18px;padding:18px}
+  .left{display:flex;flex-direction:column;gap:12px}
+  .video-stage{background:linear-gradient(180deg,#0e0e0e,#151515);border-radius:12px;padding:12px;min-height:360px;display:flex;gap:12px}
+  .local-video,.remote-video{flex:1;background:#000;border-radius:8px;position:relative;overflow:hidden}
+  video{width:100%;height:100%;object-fit:cover;background:#000}
+  .controls{display:flex;gap:8px;align-items:center}
+  .btn{background:var(--card);border:1px solid rgba(255,255,255,0.04);padding:8px 10px;border-radius:8px;color:#fff;cursor:pointer}
+  .btn.toggled{background:linear-gradient(90deg,var(--accent),#ffa31a);color:#111}
+  .panel{background:var(--card);padding:12px;border-radius:10px;}
+  .right{display:flex;flex-direction:column;gap:12px}
+  .chat{height:170px;overflow:auto}
+  .chat .msg{padding:8px;border-radius:8px;margin-bottom:8px;background:rgba(255,255,255,0.02)}
+  .sequencer{padding:12px;border-radius:10px;background:linear-gradient(180deg,#0f1112,#131516)}
+  .seq-row{display:flex;align-items:center;gap:8px;margin-bottom:8px}
+  .instrument{width:72px}
+  .steps{display:grid;grid-template-columns:repeat(16,1fr);gap:6px;flex:1}
+  .step{height:30px;border-radius:6px;background:rgba(255,255,255,0.03);display:flex;align-items:center;justify-content:center;cursor:pointer}
+  .step.active{background:var(--accent);color:#111}
+  .notation{height:120px;border-radius:8px;overflow:hidden}
+  canvas{width:100%;height:100%;display:block}
+  footer{padding:12px;text-align:center;color:var(--muted)}
+  input[type=range]{width:160px}
+  .room{display:flex;gap:8px;align-items:center}
+  .small{font-size:13px;color:var(--muted)}
+  @media(max-width:900px){.container{grid-template-columns:1fr;}.right{order:2}}
 </style>
 </head>
 <body>
-<header>Drums Class App</header>
-<section>
-  <div class="card">
-    <h2>Admin & Student</h2>
-    <ul>
-      <li>Login system</li>
-      <li>Create / Join Room</li>
-      <li>Room creator becomes Admin</li>
-      <li>Teacher gives tasks</li>
-    </ul>
+<header>
+  <img src="/mnt/data/1000128380.jpg" alt="logo" />
+  <div>
+    <h1>Drums Class — Live Studio</h1>
+    <div class="small">Create rooms, teach, sequence, record, and review — web-first prototype</div>
   </div>
+</header>
+<div class="container">
+  <div class="left">
+    <div class="panel video-stage">
+      <div class="local-video">
+        <video id="localVideo" autoplay muted playsinline></video>
+        <div style="position:absolute;right:8px;bottom:8px;background:rgba(0,0,0,0.4);padding:6px;border-radius:6px;font-size:13px">You (preview)</div>
+      </div>
+      <div class="remote-video">
+        <video id="remoteVideo" autoplay playsinline></video>
+        <div style="position:absolute;right:8px;bottom:8px;background:rgba(0,0,0,0.4);padding:6px;border-radius:6px;font-size:13px">Room view</div>
+      </div>
+    </div>
+
+    <div class="panel controls">
+      <div class="room">
+        <button id="createRoom" class="btn">Create Room</button>
+        <input id="roomId" placeholder="Room ID" style="background:transparent;border:1px solid rgba(255,255,255,0.04);color:#fff;padding:8px;border-radius:8px" />
+        <button id="joinRoom" class="btn">Join</button>
+      </div>
+      <div style="flex:1"></div>
+      <button id="camBtn" class="btn">Camera</button>
+      <button id="micBtn" class="btn">Mic</button>
+      <button id="shareBtn" class="btn">Share Screen</button>
+      <button id="recordBtn" class="btn">Record</button>
+    </div>
+
+    <div class="panel">
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <div><strong>Metronome</strong> <span class="small">(plays with sequencer)</span></div>
+        <div style="display:flex;align-items:center;gap:8px">
+          <input type="range" id="tempo" min="40" max="220" value="120"> <div id="tempoLabel">120 BPM</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel sequencer">
+      <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
+        <strong>Drum Sequencer</strong>
+        <div style="display:flex;gap:8px;align-items:center"><button id="playSeq" class="btn">Play</button><button id="stopSeq" class="btn">Stop</button></div>
+      </div>
+
+      <div id="rows"></div>
+
+      <div style="display:flex;gap:8px;margin-top:10px;align-items:center">
+        <button id="clearSeq" class="btn">Clear</button>
+        <label class="small">Steps</label>
+        <select id="stepsCount" class="btn"><option>16</option><option>8</option></select>
+      </div>
+    </div>
+
+  </div>
+
+  <aside class="right">
+    <div class="panel notation">
+      <canvas id="notationCanvas"></canvas>
+    </div>
+
+    <div class="panel chat">
+      <div><strong>Chat / Notes</strong></div>
+      <div id="messages" style="margin-top:8px"></div>
+      <div style="display:flex;gap:8px;margin-top:8px">
+        <input id="chatInput" placeholder="Type message" style="flex:1;background:transparent;border:1px solid rgba(255,255,255,0.04);padding:8px;border-radius:8px;color:#fff">
+        <button id="sendChat" class="btn">Send</button>
+      </div>
+    </div>
+
+    <div class="panel">
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <strong>Recordings</strong>
+        <small class="small">Local only</small>
+      </div>
+      <div id="recs" style="margin-top:8px"></div>
+    </div>
+  </aside>
+</div>
+
+<footer>Prototype — fully client side. Multi-user live meetings require a simple signaling server (we can add next).</footer>
+
+<script>
+// ======== Basic local video preview ========
+const localVideo = document.getElementById('localVideo');
+const remoteVideo = document.getElementById('remoteVideo');
+const camBtn = document.getElementById('camBtn');
+const micBtn = document.getElementById('micBtn');
+const shareBtn = document.getElementById('shareBtn');
+const createRoom = document.getElementById('createRoom');
+const joinRoom = document.getElementById('joinRoom');
+const roomId = document.getElementById('roomId');
+const sendChat = document.getElementById('sendChat');
+const chatInput = document.getElementById('chatInput');
+const messages = document.getElementById('messages');
+const recs = document.getElementById('recs');
+
+let localStream = null;
+let micEnabled = true;
+let camEnabled = true;
+let mediaRecorder = null;
+let recordedChunks = [];
+
+async function startPreview(){
+  try{
+    localStream = await navigator.mediaDevices.getUserMedia({video:true,audio:true});
+    localVideo.srcObject = localStream;
+    // show same in remote preview for demo (no signaling)
+    remoteVideo.srcObject = localStream;
+    setupAudioGraph();
+  }catch(e){console.error('getUserMedia failed',e)}
+}
+startPreview();
+
+camBtn.addEventListener('click',()=>{
+  if(!localStream) return;
+  camEnabled = !camEnabled;
+  localStream.getVideoTracks().forEach(t=>t.enabled = camEnabled);
+  camBtn.classList.toggle('toggled',camEnabled);
+  camBtn.textContent = camEnabled? 'Camera' : 'Camera Off';
+});
+micBtn.addEventListener('click',()=>{
+  if(!localStream) return;
+  micEnabled = !micEnabled;
+  localStream.getAudioTracks().forEach(t=>t.enabled = micEnabled);
+  micBtn.classList.toggle('toggled',micEnabled);
+  micBtn.textContent = micEnabled? 'Mic' : 'Mic Off';
+});
+
+shareBtn.addEventListener('click',async()=>{
+  try{
+    const s = await navigator.mediaDevices.getDisplayMedia({video:true});
+    // swap remote preview to show shared
+    remoteVideo.srcObject = s;
+  }catch(e){console.error('share failed',e)}
+});
+
+createRoom.addEventListener('click',()=>{
+  const id = Math.random().toString(36).slice(2,9);
+  roomId.value = id;
+  alert('Room created: '+id+' (local demo)');
+});
+joinRoom.addEventListener('click',()=>{
+  if(!roomId.value) return alert('Enter room id');
+  alert('Joined room '+roomId.value+' (local demo)');
+});
+
+sendChat.addEventListener('click',()=>{
+  const txt = chatInput.value.trim(); if(!txt) return;
+  addMessage('You',txt);
+  chatInput.value='';
+});
+function addMessage(who, txt){
+  const d = document.createElement('div'); d.className='msg'; d.textContent = who+': '+txt; messages.appendChild(d); messages.scrollTop = messages.scrollHeight;
+}
+
+// ======== Audio context and simple drum sounds ========
+const AudioContext = window.AudioContext || window.webkitAudioContext;
+const audioCtx = new AudioContext();
+let masterGain = audioCtx.createGain(); masterGain.gain.value = 0.9; masterGain.connect(audioCtx.destination);
+let drumGain = audioCtx.createGain(); drumGain.gain.value = 1; drumGain.connect(masterGain);
+let micSource = null;
+
+async function setupAudioGraph(){
+  if(!localStream) return;
+  if(!micSource){
+    micSource = audioCtx.createMediaStreamSource(localStream);
+    micSource.connect(masterGain);
+  }
+}
+
+function playKick(time){
+  const o = audioCtx.createOscillator();
+  const g = audioCtx.createGain();
+  o.type='sine'; o.frequency.setValueAtTime(150, time);
+  o.frequency.exponentialRampToValueAtTime(50, time+0.2);
+  g.gain.setValueAtTime(1, time); g.gain.exponentialRampToValueAtTime(0.001, time+0.3);
+  o.connect(g); g.connect(drumGain); o.start(time); o.stop(time+0.3);
+}
+function playSnare(time){
+  // noise + pitch
+  const bufferSize = audioCtx.sampleRate * 0.2;
+  const buffer = audioCtx.createBuffer(1, bufferSize, audioCtx.sampleRate);
+  const data = buffer.getChannelData(0);
+  for (let i=0;i<bufferSize;i++){ data[i] = (Math.random()*2-1) * Math.exp(-i/bufferSize*6); }
+  const noise = audioCtx.createBufferSource(); noise.buffer = buffer;
+  const noiseFilter = audioCtx.createBiquadFilter(); noiseFilter.type='bandpass'; noiseFilter.frequency.value=2000;
+  const g = audioCtx.createGain(); g.gain.setValueAtTime(1, audioCtx.currentTime); g.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime+0.2);
+  noise.connect(noiseFilter); noiseFilter.connect(g); g.connect(drumGain);
+  noise.start(time); noise.stop(time+0.2);
+}
+function playHiHat(time){
+  const bufferSize = audioCtx.sampleRate * 0.05;
+  const buffer = audioCtx.createBuffer(1, bufferSize, audioCtx.sampleRate);
+  const data = buffer.getChannelData(0);
+  for (let i=0;i<bufferSize;i++){ data[i] = (Math.random()*2-1) * Math.exp(-i/bufferSize*10); }
+  const noise = audioCtx.createBufferSource(); noise.buffer = buffer;
+  const filt = audioCtx.createBiquadFilter(); filt.type='highpass'; filt.frequency.value=7000;
+  const g = audioCtx.createGain(); g.gain.setValueAtTime(0.6, time); g.gain.exponentialRampToValueAtTime(0.001, time+0.08);
+  noise.connect(filt); filt.connect(g); g.connect(drumGain);
+  noise.start(time); noise.stop(time+0.1);
+}
+
+// ======== Sequencer & Notation ========
+const instruments = [{id:'kick',label:'Kick'},{id:'snare',label:'Snare'},{id:'hihat',label:'Hi-Hat'}];
+let steps = 16;
+let seq = {}; instruments.forEach(inst=>{seq[inst.id]=new Array(steps).fill(false)});
+const rows = document.getElementById('rows'); const stepsCount = document.getElementById('stepsCount');
+const playSeq = document.getElementById('playSeq'); const stopSeq = document.getElementById('stopSeq'); const clearSeq = document.getElementById('clearSeq');
+function buildSequencer(){
+  rows.innerHTML='';
+  instruments.forEach(inst=>{
+    const row = document.createElement('div'); row.className='seq-row';
+    const lab = document.createElement('div'); lab.className='instrument'; lab.textContent = inst.label; row.appendChild(lab);
+    const stepsWrap = document.createElement('div'); stepsWrap.className='steps';
+    for(let i=0;i<steps;i++){
+      const s = document.createElement('div'); s.className='step'; s.dataset.i=i; s.dataset.inst=inst.id; s.addEventListener('click',()=>{ seq[inst.id][i] = !seq[inst.id][i]; s.classList.toggle('active', seq[inst.id][i]); renderNotation(); });
+      stepsWrap.appendChild(s);
+    }
+    row.appendChild(stepsWrap); rows.appendChild(row);
+  });
+}
+buildSequencer();
+stepsCount.addEventListener('change',()=>{ steps = parseInt(stepsCount.value); instruments.forEach(inst=>seq[inst.id]=new Array(steps).fill(false)); buildSequencer(); });
+clearSeq.addEventListener('click',()=>{ instruments.forEach(inst=>seq[inst.id].fill(false)); buildSequencer(); renderNotation(); });
+
+let isPlaying=false; let currentStep=0; let schedulerId=null; const tempoControl = document.getElementById('tempo'); const tempoLabel = document.getElementById('tempoLabel');
+function scheduleStep(){
+  const bpm = parseInt(tempoControl.value);
+  const interval = (60 / bpm) / 4 * 1000; // 16th steps
+  // play current step
+  const tNow = audioCtx.currentTime;
+  instruments.forEach(inst=>{
+    if(seq[inst.id][currentStep]){
+      if(inst.id==='kick') playKick(tNow);
+      if(inst.id==='snare') playSnare(tNow);
+      if(inst.id==='hihat') playHiHat(tNow);
+    }
+  });
+  renderNotation(currentStep);
+  currentStep = (currentStep+1) % steps;
+  schedulerId = setTimeout(scheduleStep, interval);
+}
+playSeq.addEventListener('click',()=>{ if(isPlaying) return; isPlaying=true; currentStep=0; scheduleStep(); playSeq.classList.add('toggled'); });
+stopSeq.addEventListener('click',()=>{ if(!isPlaying) return; isPlaying=false; clearTimeout(schedulerId); playSeq.classList.remove('toggled'); renderNotation(-1); });
+tempoControl.addEventListener('input',()=>{ tempoLabel.textContent = tempoControl.value + ' BPM'; });
+
+// ===== Notation Canvas (5 lines) =====
+const canvas = document.getElementById('notationCanvas'); const ctx = canvas.getContext('2d');
+function resizeCanvas(){ canvas.width = canvas.clientWidth * devicePixelRatio; canvas.height = canvas.clientHeight * devicePixelRatio; ctx.scale(devicePixelRatio, devicePixelRatio); drawStaff(); }
+window.addEventListener('resize',()=>{ // redraw
+  ctx.setTransform(1,0,0,1,0,0); // reset
+  resizeCanvas();
+});
+resizeCanvas();
+
+function drawStaff(){
+  const w = canvas.clientWidth; const h = canvas.clientHeight; ctx.clearRect(0,0,w,h);
+  ctx.save(); ctx.strokeStyle = '#444'; ctx.lineWidth = 1;
+  const margin = 12; const linesY = [];
+  const usableH = h - margin*2; const spacing = usableH / 6; // five lines
+  for(let i=0;i<5;i++){ const y = margin + spacing*(i+1); linesY.push(y); ctx.beginPath(); ctx.moveTo(10,y); ctx.lineTo(w-10,y); ctx.stroke(); }
+  ctx.restore();
+  // draw existing programmed notes as blocks along a timeline
+  renderNotation();
+}
+
+function renderNotation(highlightStep=-1){
+  const w = canvas.clientWidth; const h = canvas.clientHeight; ctx.clearRect(0,0,w,h); // reset
+  drawStaffLinesOnly();
+  // timeline width excluding margins
+  const left = 14; const right = w - 14; const timelineW = right - left;
+  const stepW = timelineW / steps;
+  // map instruments to staff positions (y)
+  const staffPositions = { 'kick': 4, 'snare': 3, 'hihat': 1 };
+  instruments.forEach(inst=>{
+    for(let i=0;i<steps;i++){
+      if(seq[inst.id][i]){
+        const x = left + i*stepW + stepW/2;
+        const row = staffPositions[inst.id];
+        const y = 12 + (h-24)/6 * row;
+        // draw circle or icon
+        ctx.beginPath(); ctx.fillStyle = (inst.id==='kick'?'#ff8a80': inst.id==='snare'?'#ffd54f':'#81d4fa'); ctx.arc(x,y,8,0,Math.PI*2); ctx.fill();
+      }
+    }
+  });
+  // highlight playhead
+  if(highlightStep>=0){ const x = left + highlightStep*stepW + stepW/2; ctx.beginPath(); ctx.fillStyle='rgba(255,255,255,0.06)'; ctx.fillRect(left+highlightStep*stepW,6,stepW,h-12); }
+}
+
+function drawStaffLinesOnly(){ const w = canvas.clientWidth; const h = canvas.clientHeight; ctx.save(); ctx.strokeStyle = '#444'; ctx.lineWidth = 1; const margin = 12; const usableH = h - margin*2; const spacing = usableH / 6; for(let i=0;i<5;i++){ const y = margin + spacing*(i+1); ctx.beginPath(); ctx.moveTo(10,y); ctx.lineTo(w-10,y); ctx.stroke(); } ctx.restore(); }
+
+// ===== MediaRecorder for local recording (mic + drums mix) =====
+function startRecording(){
+  // create a destination to capture audioCtx mixed output
+  const dest = audioCtx.createMediaStreamDestination(); masterGain.connect(dest);
+  // combine with video? For now record audio only
+  mediaRecorder = new MediaRecorder(dest.stream);
+  recordedChunks = [];
+  mediaRecorder.ondataavailable = e=>{ if(e.data.size>0) recordedChunks.push(e.data); };
+  mediaRecorder.onstop = ()=>{
+    const blob = new Blob(recordedChunks,{type:'audio/webm'});
+    const url = URL.createObjectURL(blob);
+    const el = document.createElement('div'); const a = document.createElement('audio'); a.controls = true; a.src = url; el.appendChild(a); const dwn = document.createElement('a'); dwn.href = url; dwn.download='recording.webm'; dwn.textContent=' Download'; dwn.style.marginLeft='8px'; el.appendChild(dwn); recs.appendChild(el);
+  };
+  mediaRecorder.start();
+}
+function stopRecording(){ if(mediaRecorder && mediaRecorder.state==='recording') mediaRecorder.stop(); }
+
+const recordBtn = document.getElementById('recordBtn');
+recordBtn.addEventListener('click',()=>{
+  if(recordBtn.classList.contains('toggled')){ stopRecording(); recordBtn.classList.remove('toggled'); recordBtn.textContent='Record'; }
+  else{ startRecording(); recordBtn.classList.add('toggled'); recordBtn.textContent='Recording...'; }
+});
+
+// ===== Simple UI glue =====n
+// render notation initially
+function init(){ drawStaff(); }
+init();
+
+// ===== small helpers: draw on load =====
+(function(){
+  // friendly sample pattern
+  seq.kick[0]=true; seq.kick[8]=true; seq.snare[4]=true; seq.snare[12]=true; for(let i=0;i<16;i+=2) seq.hihat[i]=true; buildSequencer(); renderNotation();
+})();
+
+// ===== Chat send with enter =====
+chatInput.addEventListener('keydown',(e)=>{ if(e.key==='Enter'){ sendChat.click(); } });
+
+</script>
+</body>
+</html>
 
   <div class="card">
     <h2>Display & Notation</h2>
