--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@ body{background:linear-gradient(180deg,#061024 0%, #071827 50%, #071826 100%);co
 
   <div class="card staff-wrap">
     <div class="toolbar">
+      <!-- Note Symbol Palette -->
+      <div class="legend" id="symbolPalette" style="gap:6px;flex-wrap:wrap">
+        <button class="btn small" data-symbol="note" title="Note">●</button>
+        <button class="btn small" data-symbol="x" title="Hi‑hat X">×</button>
+        <button class="btn small" data-symbol="ghost" title="Ghost note">◦</button>
+        <button class="btn small" data-symbol="accent" title="Accent">▶</button>
+        <button class="btn small" data-symbol="flam" title="Flam">𝆓</button>
+        <button class="btn small" data-symbol="roll" title="Roll">///</button>
+        <span style="color:var(--muted);font-size:12px">Selected: <b id="activeSymbol">●</b></span>
+      </div>
+      <!-- Note Symbol Palette -->
+      <div class="legend" id="symbolPalette" style="gap:6px;flex-wrap:wrap">
+        <button class="btn small" data-symbol="note" title="Note">●</button>
+        <button class="btn small" data-symbol="x" title="Hi‑hat X">×</button>
+        <button class="btn small" data-symbol="ghost" title="Ghost note">◦</button>
+        <button class="btn small" data-symbol="accent" title="Accent">▶</button>
+        <button class="btn small" data-symbol="flam" title="Flam">𝆓</button>
+        <button class="btn small" data-symbol="roll" title="Roll">///</button>
+        <span style="color:var(--muted);font-size:12px">Selected: <b id="activeSymbol">●</b></span>
+      </div>
       <div class="legend">
         <span class="note-dot"></span>
         <div style="color:var(--muted);font-size:13px">Percussion note</div>
@@ -114,8 +134,8 @@ body{background:linear-gradient(180deg,#061024 0%, #071827 50%, #071826 100%);co
       <div style="flex:1"></div>
       <div class="right-top">
         <div class="badge" id="barsBadge">Bars: 1</div>
-        <div class="badge" id="cursorInfo">Cursor: -</div>
-      </div>
+        <div class="badge" id="cursorInfo">Cconst state = {
+  activeSymbol: 'note',      </div>
     </div>
 
     <div class="staff" id="staff">
@@ -142,6 +162,7 @@ body{background:linear-gradient(180deg,#061024 0%, #071827 50%, #071826 100%);co
 
 // --- State ---
 const state = {
+  activeSymbol: 'note',
   tempo: 100,
   beatsPerBar: 4,
   subdivisions: 4, // 16th notes by default (4 subdivisions per beat)
@@ -220,15 +241,34 @@ function drawStaff(){
     const x = left + i*slotW;
     if(i % (state.subdivisions) === 0) { // beat lines stronger
       ctx.strokeStyle = 'rgba(255,255,255,0.05)'; ctx.lineWidth=1.2;
-    } else { ctx.strokeStyle = 'rgba(255,255,255,0.02)'; ctx.lineWidth=0.8; }
+    } else { ctx.sdrawNote(x,y,n.symbol||'note');rgba(255,2function drawNote(x,y,symbol){
+  ctx.textAlign='center'; ctx.textBaseline='middle';
+  ctx.font='14px system-ui';
+  ctx.fillStyle='rgba(124,227,255,0.95)';
+  let char='●';
+  if(symbol==='x') char='×';
+  if(symbol==='ghost') char='◦';
+  if(symbol==='accent') char='▶';
+  if(symbol==='flam') char='𝆓';
+  if(symbol==='roll') char='///';
+  ctx.fillText(char,x,y);
+}Width=0.8; }
     ctx.beginPath();ctx.moveTo(x,staffTop-6);ctx.lineTo(x,staffTop+lineGap*4+18);ctx.stroke();
   }
 
   // draw instrument labels on left
   ctx.fillStyle = 'rgba(255,255,255,0.85)';
   ctx.font = '12px system-ui';
-  // map instrument line (0..4) top to bottom
-  state.instruments.forEach(inst=>{
+  // map instrument line (0..4) t// --- Symbol Palette Logic ---
+const activeSymbolUI = document.getElementById('activeSymbol');
+document.getElementById('symbolPalette').querySelectorAll('button').forEach(btn=>{
+  btn.addEventListener('click',()=>{
+    state.activeSymbol = btn.dataset.symbol;
+    activeSymbolUI.textContent = btn.textContent;
+  });
+});
+
+// --- Interaction: click to toggle notes ---=>{
     const y = staffTop + inst.line*lineGap + 6;
     ctx.fillText(inst.name, 8, y+4);
   });
@@ -240,11 +280,18 @@ function drawStaff(){
     const x = left + (n.bar*state.beatsPerBar*state.subdivisions + n.subdiv) * slotW + slotW/2;
     const y = staffTop + inst.line*lineGap + 6;
 
-    drawNote(x,y);
+    
   });
 }
 
-function drawNote(x,y){
+function drawNote(x,y,symbol){
+  ctx.textAlign='center'; ctx.textBaseline='middle';
+  ctx.font='14px system-ui';
+  ctx.fillStyle='rgba(124,227,255,0.95)';
+  let char='●';
+  if(symbol==='x') char='×';
+  if(symbol==='ghost') char='◦';
+  if(symbol==='accent') char='▶';
   ctx.fillStyle = 'rgba(124,227,255,0.95)';
   ctx.beginPath();
   ctx.ellipse(x,y,7,5,0,0,Math.PI*2);
@@ -299,8 +346,7 @@ function addNoteFromXY(x,y){
   const rect = canvas.getBoundingClientRect();
   const w = rect.width; const pad = 18; const left = pad; const right = w-pad; const staffTop = 36; const staffHeight=220; const lineGap = staffHeight/6;
   const totalSlots = state.bars * state.beatsPerBar * state.subdivisions;
-  const slotW = (right-left) / totalSlots;
-  const absIdx = Math.floor((x-left)/slotW);
+  const slotW = (rstate.notes.push({bar,subdiv,instrumentId, symbol: state.activeSymbol});th.floor((x-left)/slotW);
   if(absIdx<0 || absIdx>=totalSlots) return;
   const bar = Math.floor(absIdx / (state.beatsPerBar*state.subdivisions));
   const subdiv = absIdx % (state.beatsPerBar*state.subdivisions);
@@ -327,7 +373,7 @@ function addNote(bar,subdiv,instrumentId){
   drawStaff();
 }
 
-function clearNotes(){ pushUndo(); state.notes=[]; drawStaff(); saveStatePreview(); }
+function clearNotes(){ pushUndo(); state.aff(); saveStatePreview(); }
 
 // --- Undo/Redo ---
 function pushUndo(){
